TCP Multiplayer Implementation Add Client saying 'Joined', that runs 'setup' method, to sync clients Add Read & Run commands at start of Form1.UpdateForm, Take String and perform those actions. This is to sync player commands over instances Add Globals.SinglePlayer to keep commands running localy and avoiding network-based logic for solo play Change KeyListener to Switch statement for effeceincy Change Listener to take multiple Clients via threading. This allows more players to join Add Client Name in Config to identify for debug purposes MakingServer keyboard command now Makes Client so serverwide replies can be sent via this client. Info held i nform1 boolean 'server' Add List of Players. thisPlayer references this List. This is to manage other players connected Add Client.ID, that is attatched to form1.palyerID. This is index of player List that 'thisplayer' should be if client Add Server sending client ID on creation to sync player list and attatched info Add friendly unit Image to represent where other palyers are Add Draw Text'Print Function' to Client, that automates displaying Client ID & name with Debug messages Add Remove Unit to Cell to clear cell after palyer no longer on it. Will use same code for enemies moving Add 'V" Key Moving Player 1 if exists, this is to test synced commands

--- a/DoomCloneV2.csproj
+++ b/DoomCloneV2.csproj
@@ -90,6 +90,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Changes.txt" />
     <Content Include="config.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -97,6 +98,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\Images\Enemy\Devil\Devil_Idle.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Images\Friendly\Player1\Player1_Idle.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\Images\Gun Parts\Arm\Arm_001_000_Camo.png" />
