13/05/2020 - Damage and synced-worlds Add CursorObject to refract aiming mechanic handling Add Clickhandler to either shoot @ cursor location, or create new Cursor Object so gunplay now entirely based around cursorobject On UpdateForm, If Cursor true, randomly shifts cursor by 'x' pixels so there is a random mechanic of shooting success Add global form1 int- 'shots fired'. Cursor will disappear after 4 shots. This is to represent automatic fire 16/05/2020: Add a command for dealing damage to enemyUnit ('SH[EnemyIndex/000][PlayerShootngIndex/00][DamageDealt/000]) so enemy damage can be synced over server Changed Command Syntax to read the first 3letters of the command so more verbose commands can be given, removes 'if; statements. Add Comments describing each command type for further development & info formatting Made utility functions for changing directions and moving so changes to handlign are easier/centralized New Command 'SEW' and "SEE" pause drawing on the client side and popualte cellist and unitlist with server's. This is so client world matches server world for syncing Add 'type' for cell. At the moment it is '1' if mat. This is to draw the correct cell type when the above syncing occurs Add 'PauseForInfo' in Globals. If this si true, no drawign will occur as the clietn is gettign the new world info from server. Unit now stores X & Y so that the relevant cell can create a unit when client world building to match server's Add Damage Commands to sync damage over network Add Icon for more friendly UI

--- a/DoomCloneV2.csproj
+++ b/DoomCloneV2.csproj
@@ -95,6 +95,9 @@
     <Content Include="config.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\Images\DoomClone.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\Images\Enemy\Devil\Devil_Death.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
