24/06/2020 Refactor Commands: Refracted more commands from 'ReadCommands' in Form1 to 'CommandReader' Make Visual studio project add file paths (such as Resources/Images/Projectiles)

--- a/DoomCloneV2.csproj
+++ b/DoomCloneV2.csproj
@@ -49,10 +49,13 @@
     <Compile Include="Cell.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Command.cs" />
+    <Compile Include="CommandReader.cs" />
     <Compile Include="CursorObject.cs" />
+    <Compile Include="Entity.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="Gun.cs" />
     <Compile Include="Player.cs" />
+    <Compile Include="Projectile.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="ThreadFunctions.cs" />
     <Compile Include="Unit.cs" />
@@ -146,6 +149,9 @@
     <Content Include="Resources\Images\Gun Parts\Sight\Sight_000_000_Boring.png" />
     <Content Include="Resources\Images\Gun Parts\Sight\Sight_000_001_Matrix.png" />
     <Content Include="Resources\Images\Gun Parts\Sight\Sight_000_001_RedDot.png" />
+    <Content Include="Resources\Images\Projectiles\Fireball\Flame.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\Images\Utility\Crosshair.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
