29/06/2020 MapMaker Add GetColour to 'Cell' so colour of cell can be shown in 'MapMaker' Add new Instance of new form 'MapMaker' in 'Program' Before running 'Form1' so Map generation can be tested Add new Form 'MapGenForm' that has button and draw panel On pushing button, cellList local to 'MapGenForm' will draw each cell's floor colour 5x5 pixels Add Resource 'MapMaker.ICO' to Resources/Images to have Icon

--- a/DoomCloneV2.csproj
+++ b/DoomCloneV2.csproj
@@ -54,6 +54,9 @@
     <Compile Include="Entity.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="Gun.cs" />
+    <Compile Include="MapGenForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Player.cs" />
     <Compile Include="Projectile.cs" />
     <Compile Include="Server.cs" />
@@ -149,6 +152,9 @@
     <Content Include="Resources\Images\Gun Parts\Sight\Sight_000_000_Boring.png" />
     <Content Include="Resources\Images\Gun Parts\Sight\Sight_000_001_Matrix.png" />
     <Content Include="Resources\Images\Gun Parts\Sight\Sight_000_001_RedDot.png" />
+    <Content Include="Resources\Images\MapMaker.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\Images\Projectiles\Fireball\Flame.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
