26/07/2020 - Gameplay Build 26/07/2020:     > Add a String in Player called 'playerFileName'. This is to have varialbe palyerfile locatiosn and names for character skins     > Make link to player skin files use 'palyerFileName' isntead of discreet refrencing.     > Change Player constructor to take String parpaemter playerFileName, with a default of "Player01"     >Add 'PlayerFileName' value to config.xml     > Add GetPlayerImage() Method to 'Client' so connection Thread that sends 'COC' command can also send player Skin     > Rename all Player SKins to use {00} formated ID's     > Rework 'COC' command handle in 'Form1' to send out a modified 'SEP' code that also sends palyer ID     > Sep now sets player skin if not current layer     >Add Utility Method getFreeCell(Random rand) to 'form1.cs' to get a free cell Point     >'Form1.cs' as Server sends a getFreeCell poitn for connecting player, not set position. This is to be compatible with random maps. 	> Add command send by 'COC' in Server. The command is 'SEC' - Set Enviroment Colours. 		When connecting, wall colours will be set as a RBG value of the first 9 digits, then floor colour then roof colour. 		These value have been moved from 'MapGenForm' to 'Globals'     >Added Utility Function 'BuildColourString' that gets the '000' formatted RGB values of a colour.

--- a/DoomCloneV2.csproj
+++ b/DoomCloneV2.csproj
@@ -97,6 +97,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Addresses.txt" />
     <Content Include="Changes.txt" />
     <Content Include="config.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -110,7 +111,49 @@
     <Content Include="Resources\Images\Enemy\Devil\Devil_Idle.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Resources\Images\Friendly\Player1\Player1_Idle.png">
+    <Content Include="Resources\Images\Friendly\Player01\Player01_Death.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Images\Friendly\Player01\Player01_Idle.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Images\Friendly\Player01\Player01_IdleOld.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Images\Friendly\Player02\Player02_Death.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Images\Friendly\Player02\Player02_Idle.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Images\Friendly\Player03\Player03_Death.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Images\Friendly\Player03\Player03_Fire.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Images\Friendly\Player03\Player03_Idle.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Images\Friendly\Player04\Player04_Death.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Images\Friendly\Player04\Player04_Idle.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Images\Friendly\Player05\Player05_Death.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Images\Friendly\Player05\Player05_Fire.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Images\Friendly\Player05\Player05_Idle.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Images\Friendly\Player06\Player06_Death.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Images\Friendly\Player06\Player06_Idle.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\Images\Gun Parts\Arm\Arm_001_000_Camo.png" />
